# optimalAlgorithm

./: README.md  Target trajectory prediction by parametric equation.md
01/: clip_image001.wmz  clip_image005.wmz
optimal/: CMakeLists.txt  NumericDerivatives.cpp  Target trajectory prediction by parametric equation.md  creatPath.cpp  lineCirclefit.cpp  path.txt  plot.cpp  plot.hpp  spinEight.cpp
optimal/01/: clip_image003.wmz  clip_image007.wmz  clip_oledata.mso
optimal/creatPath/: CMakeLists.txt  creatPath.cpp  creatPlan.cpp
optimal/creatPath/inc/: creatPlan.hpp
